--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>RELEASE</version>
+			<!-- <version>RELEASE</version>-->
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
